--- a/css/query.css
+++ b/css/query.css
@@ -1,27 +1,39 @@
 @media (max-width: 992px) {
-/* ************ */
-/* project */
-/* ************ */
+  /* ************ */
+  /* project */
+  /* ************ */
   .project-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  /* ************ */
+  /* about */
+  /* ************ */
+  .about-grid {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media (max-width: 600px) {
-/* ************ */
-/* NAVIGATION BAR */
-/* ************ */
-.navbar-nav {
+  /* ************ */
+  /* NAVIGATION BAR */
+  /* ************ */
+  .navbar-nav {
     display: none;
-}
+  }
 
-span {
+  span {
     display: none;
-}
-/* ************ */
-/* project */
-/* ************ */
+  }
+  /* ************ */
+  /* project */
+  /* ************ */
   .project-grid {
     grid-template-columns: 1fr;
+  }
+  /* ************ */
+  /* about */
+  /* ************ */
+  .about-grid {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
