--- a/css/main.css
+++ b/css/main.css
@@ -81,6 +81,98 @@
 /* about */
 /* ************ */
 
-.text {
+.section-box > p {
   margin: 15px 0px;
+}
+
+.about-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 0px 16px;
+  padding: 0px 16px 8px 16px;
+}
+
+.card {
+  /* margin: 0px 0px 16px; */
+  /* padding: 0px 8px; */
+}
+.card-title {
+  font-size: 24px;
+  margin: 10px 0px;
+}
+
+.card-sub {
+  opacity: 0.6;
+  margin: 15px 0px;
+}
+
+.card-text {
+  margin: 15px 0px;
+}
+
+.card-button {
+  display: inline-block;
+  width: 100%;
+  background-color: #f1f1f1;
+  padding: 8px 16px;
+  text-align: center;
+}
+
+.card-button:hover {
+  background-color: #cccccc;
+}
+
+/* ************ */
+/* contact */
+/* ************ */
+
+.form-control {
+  width: 100%;
+  display: block;
+  background-color: #ffffff;
+  border: 1px solid #ccc;
+  margin: 16px 0px;
+  padding: 8px;
+}
+
+.form-button {
+  background-color: black;
+  color: white;
+  display: inline-block;
+  margin: 16px 0px;
+  padding: 8px 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.form-button:hover {
+  background-color: #cccccc;
+  color: black;
+}
+
+/* ************ */
+/* contact */
+/* ************ */
+
+.map {
+  padding: 0 6px;
+}
+
+.map-img {
+  width: 100%;
+}
+
+/* ************ */
+/* contact */
+/* ************ */
+
+.footer {
+  background-color: black;
+  color: #ffffff;
+  text-align: center;
+  padding: 16px 0px;
+}
+
+.copyright {
+  color: white;
 }
